# MyTinyIM

./: .gitignore  CMakeLists.txt  IM即时通信服务器端架构.md  README.md  config.json
CMake/: ProtoBuf.cmake
docs/: 1.environment_setup.md  2.read_write_splitting_verification.md  3.core_features_and_stability.md
infra/docker/: Dockerfile  docker-compose.yml  setup.sh
infra/docker/config/mysql/master/: my.cnf
infra/docker/config/mysql/slave1/: my.cnf
infra/docker/config/mysql/slave2/: my.cnf
infra/scripts/: enter_dev.bat  reset_dev.bat  run_backend.sh  setup_dev.bat  start_services.sh  stop_dev.bat  stop_services.sh
protos/: auth.proto  chat.proto  gateway.proto  relation.proto
sql/: init.sql
src/auth_server/: CMakeLists.txt  auth_service_impl.cpp  auth_service_impl.h  main.cpp
src/chat_server/: CMakeLists.txt  chat_service_impl.cpp  chat_service_impl.h  main.cpp
src/common/: CMakeLists.txt  config.h  db_pool.cpp  db_pool.h  grpc_channel_pool.h  packet.h  redis_client.cpp  redis_client.h  service_registry.cpp  service_registry.h
src/dispatch/: CMakeLists.txt  main.cpp  service_discovery.h
src/gateway/: CMakeLists.txt  connection_manager.cpp  connection_manager.h  gateway_service_impl.cpp  gateway_service_impl.h  http_session.cpp  http_session.h  main.cpp  server.h  websocket_session.cpp  websocket_session.h
src/user_server/: CMakeLists.txt  main.cpp  relation_service_impl.cpp  relation_service_impl.h
tests/: CMakeLists.txt  integration_test.cpp  test_client.cpp  test_client.h
web_client/: README_USAGE.md  index.html  package-lock.json  package.json  vite.config.js
web_client/src/: App.jsx  index.css
web_client/src/services/: connection_manager.js  scenario_runner.js
web_client/src/utils/: im_protocol.js
